jlamontSC-test/src/objects/Custom_Batch_Upload_Batch_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to control the custom batch job for batch upload processing</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Batch size of the batch while processing records. Lower number reduces the possibility of a CPU timeout error. Recommended value: 1</description>
        <inlineHelpText>Batch size of the batch while processing records. Lower number reduces the possibility of a CPU timeout error. Recommended value: 1</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_Number_of_Records__c</fullName>
        <defaultValue>800</defaultValue>
        <description>Number of records to be picked up in the initial query. Lower number reduces the possibility of a heap size exception. Optimal value: 800</description>
        <inlineHelpText>Number of records to be picked up in the initial query. Lower number reduces the possibility of a heap size exception. Optimal value: 800</inlineHelpText>
        <label>Limit Number of Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_schedule_After_Finish__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, will re-schedule the batch once the existing job finishes</description>
        <inlineHelpText>If checked, will re-schedule the batch once the existing job finishes</inlineHelpText>
        <label>Re-schedule After Finish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subsequent_Batch_Delay__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Delay in minutes before re-scheduling the batch after completing</description>
        <inlineHelpText>Delay in minutes before re-scheduling the batch after completing</inlineHelpText>
        <label>Subsequent Batch Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Batch Upload Batch Settings</label>
</CustomObject>